docs: expand 18 language-flavored sheets to verbose treatment
Six waves of three parallel agents, each writing against the North Star
"every section saves the reader from web-searching": include exact
flags, error message text, API names, version notes, CLI references,
and broken-then-fixed gotcha pairs.

Programming languages (Wave 3+4):
- c.md             1931 lines, 45 H2 sections
- java.md          2135 lines, 48 H2 sections
- ruby.md          2711 lines, 47 H2 sections
- lua.md           1598 lines, 41 H2 sections
- make.md          1612 lines, 47 H2 sections
- webassembly.md   1633 lines, 45 H2 sections

Shells (Wave 5+6):
- zsh.md           2021 lines, 44 H2 sections
- fish.md          2375 lines, 43 H2 sections
- nushell.md       1433 lines, 45 H2 sections
- shell-scripting  2005 lines, 47 H2 sections (POSIX-portable)

Data + scripting (Wave 6+7+8):
- awk.md           1488 lines, 41 H2 sections
- regex.md         2507 lines, 41 H2 sections (cross-dialect)
- sql.md           2096 lines, 49 H2 sections
- unicode.md       1729 lines, 42 H2 sections

Web (Wave 7+8) — html and css each split into two thematic sheets:
- html.md          2799 lines, 40 H2 sections (structure + a11y)
- html-forms.md    2568 lines, 47 H2 sections (NEW — every input type)
- css.md           3027 lines, 48 H2 sections (selectors + properties)
- css-layout.md    1971 lines, 44 H2 sections (NEW — flex / grid / pos)

Total ~37,600 new lines. All sheets follow project conventions:
H1 + one-liner, H2/H3 hierarchy, ```bash``` fences with #-prefixed
content (or raw shell where appropriate), See Also linking only to
existing sheets, References to canonical specs / books / docs.

make build && make test && make lint clean. Search ranks each new
sheet first for its own name. See Also links resolve cleanly.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>